<resources>
    <string name="app_name">Explore New West</string>
    <string name="appName">Explore New West</string>
    <string name="createPlanBtn">Create Plan</string>
    <string name="chooseActivity">Choose activity type</string>
    <string name="historyBtn">History</string>
    <string name="artBtn">Art</string>
    <string name="cultureBtn">Culture</string>
    <string name="musicBtn">Music</string>
    <string name="label_add">Add Selected</string>
    <string name="label_plans_title">Your Plans</string>
    <string name="label_edit_plan_title">Plan Name</string>
    <string name="button_ok">Confirm</string>
    <string name="button_no">Cancel</string>
    <string name="button_clear">Clear Selected</string>
    <string name="viewPlan">View Plans</string>
    <string name="yourPlansTitle">Your Plans</string>
    <string name="selectPlans">Select a Plan to View:</string>
    <string name="mapsBtn">Get Directions</string>
    <string name="eventNameTextView">Name:</string>
    <string name="eventDescLabel">Description:</string>
    <string name="contactInfoLabel">Contact:</string>
    <string name="phoneNumberLabel">Phone Number:</string>
    <string name="websiteLabel">Website:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="chooseActivitiesLabel">Choose Activities</string>
    <string name="planNameLabel">Plan Name: </string>
    <string name="planDateLabel">Plan Date: </string>
    <string name="eventsLabel">Planned Events</string>
    <string name="plannedEventsLabel">Planned Events</string>
    <string name="loginTitle">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="planNameHint">Enter Name of New Plan</string>
</resources>
