<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arsenic"
    android:orientation="vertical"
    tools:context=".login">



    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:textColor="#FFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="#FFF"
        android:background="#EC6500"
        android:text="@string/login"
        android:onClick="onLogin" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:background="@color/green"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/signup"
        android:onClick="onSignUp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/map" />
    </LinearLayout>

</LinearLayout>